fix: navbar alignment

--- a/vanellope/themes/default/sass/_layouts.scss
+++ b/vanellope/themes/default/sass/_layouts.scss
@@ -43,6 +43,7 @@
 
     & > li {
       display: inline-block;
+      color: $menu-color;
       line-height: $banner-height-lg;
       width: 5rem;
       text-align: center;
@@ -50,53 +51,6 @@
     }
   }
 }
-
-// .article-banner {
-//
-//   .banner-content {
-//     display: inline-block;
-//     vertical-align: middle;
-//     line-height: $banner-height-lg;
-//   }
-//
-//   // iPhone 7
-//   @media screen and (max-width: 960px) {
-//     & {
-//       margin-bottom: 0.8rem;
-//     }
-//
-//     .banner-content {
-//       height: 38px;
-//       line-height: 38px;
-//     }
-//   }
-// }
-
-// ul.nav {
-//     position: absolute;
-//     bottom: 0;
-//     left: 0;
-//     width: 100%;
-//     color: white;
-//     li {
-//         float: left;
-//         width: auto;
-//         text-align: left;
-//         display: inline-block;
-//         line-height: 4rem;
-//         vertical-align: middle;
-//         border-bottom: 4px solid transparent;
-//         -webkit-transition: border-bottom 200ms ease;
-//         &:not(:last-child) {
-//             margin-right: 2rem;
-//         }
-//         &.active, &:hover {
-//             -webkit-transition: border-bottom 200ms ease;
-//             border-bottom: 4px solid rgba(255, 255, 255, 1);
-//             cursor: pointer;
-//         }
-//     }
-// }
 
 .wrapper {
     @media screen and (min-width: $large-view) {
