--- a/vanellope/themes/default/sass/_variables.scss
+++ b/vanellope/themes/default/sass/_variables.scss
@@ -1,6 +1,7 @@
 // colors
 $theme-green: #428bca;
 $theme-color: #428BCA;
+$menu-color: #5D5D5D;
 
 // fonts
 $font-base-size: 10px;
@@ -14,7 +15,7 @@ $widget-header-size: 1.3rem;
 $widget-body-size: 1.2rem;
 
 // dimensions
-$banner-height-lg: 60px;
+$banner-height-lg: 4rem;
 $main-region-width: 70%;
 $sub-region-width: 30%;
 $footer-height-lg: 24px;
